added factory class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ include("${PROJECT_HOME}/cmake/CMakeLists.txt")
 
 set(${PROJECT_NAME_U}_MAJOR_VERSION 0)
 set(${PROJECT_NAME_U}_MINOR_VERSION 1)
-set(${PROJECT_NAME_U}_BUILD_VERSION 4)
+set(${PROJECT_NAME_U}_BUILD_VERSION 5)
 
 set(${PROJECT_NAME_U}_VERSION
   ${${PROJECT_NAME_U}_MAJOR_VERSION}.${${PROJECT_NAME_U}_MINOR_VERSION}.${${PROJECT_NAME_U}_BUILD_VERSION})
@@ -69,7 +69,7 @@ export_project(
 	NAME ${PROJECT_NAME}
 	NAMESPACE ${PROJECT_NAME}
 	REVISION ${${PROJECT_NAME_U}_VERSION}
-	DIRECTORY cmake/package
+	DIRECTORY cmake/package # for later use
 )
 
 if (SKIP_CONAN_PACKAGE STREQUAL "OFF")
