--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,4 +4,5 @@ set(TEST_FILE_DIR "${CMAKE_BINARY_DIR}/test-out")
 file(MAKE_DIRECTORY ${TEST_FILE_DIR})
 message(STATUS "added test output directory in ${TEST_FILE_DIR}")
 
+add_subdirectory(factory)
 add_subdirectory(cpuclock)
