--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,5 +6,7 @@ file(MAKE_DIRECTORY ${TEST_FILE_DIR})
 message(STATUS "added test output directory in ${TEST_FILE_DIR}")
 
 add_subdirectory(detect)
+add_subdirectory(filter)
 add_subdirectory(factory)
+add_subdirectory(contains)
 add_subdirectory(cpuclock)
