--- a/tests/clock/CMakeLists.txt
+++ b/tests/clock/CMakeLists.txt
@@ -13,10 +13,14 @@ add_executable(
     ${TARGET_SOURCES}
 )
 
-target_link_libraries(${TARGET_NAME}
+target_link_libraries(
+    ${TARGET_NAME}
 	meta
 	CONAN_PKG::gtest
 	Threads::Threads
 )
+
+#will save the asm in top cmake folder
+#set_target_properties(${TARGET_NAME} PROPERTIES COMPILE_FLAGS "-save-temps -fverbose-asm") 
 
 add_gtest(TARGET ${TARGET_NAME} BINARY ${TARGET_NAME})
