added standalone fold_enum

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,5 +10,6 @@ add_subdirectory(filter)
 add_subdirectory(factory)
 add_subdirectory(contains)
 add_subdirectory(recorder)
+add_subdirectory(fold)
 add_subdirectory(clock)
 
