--- a/tests/fold/tag/CMakeLists.txt
+++ b/tests/fold/tag/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.13)
 
-SET(TARGET_NAME test-unfold)
+SET(TARGET_NAME test-fold-tag)
 
 setup_component(TARGET ${TARGET_NAME})
 
