--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(lambda)
 add_subdirectory(factory)
 add_subdirectory(contains)
 add_subdirectory(recorder)
+add_subdirectory(threadpool)
