--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,65 +2,24 @@
     "cmake.configureArgs": [
         "-DCMAKE_PROFILE=gcc84"
     ],
-    "cmake.cmakePath": "/opt/gcc84/bin/cmake",
-    "cmake.ctestPath": "/opt/gcc84/bin/ctest",
-    "files.associations": {
-        ".cmake": "cmake",
-        "chrono": "cpp",
-        "array": "cpp",
-        "atomic": "cpp",
-        "*.tcc": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "deque": "cpp",
-        "unordered_map": "cpp",
-        "vector": "cpp",
-        "exception": "cpp",
-        "algorithm": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "map": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "numeric": "cpp",
-        "optional": "cpp",
-        "random": "cpp",
-        "ratio": "cpp",
-        "set": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "fstream": "cpp",
-        "initializer_list": "cpp",
-        "iomanip": "cpp",
-        "iosfwd": "cpp",
-        "iostream": "cpp",
-        "istream": "cpp",
-        "limits": "cpp",
-        "new": "cpp",
-        "ostream": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "thread": "cpp",
-        "cinttypes": "cpp",
-        "typeinfo": "cpp"
-    },
-    "cmake.cacheInit": null,
     "cmake.buildDirectory": "${workspaceFolder}/${buildType}",
+    "cmake.buildTask": false,
+    "cmake.environment": {
+      "PATH": "/opt/miniconda/envs/py38/bin:${env:PATH}",
+      "CONAN_CHANNEL": "stable",
+      "CONAN_USERNAME": "jvermosen"
+    },
+    "files.exclude": {
+        "bin": true,
+        "lib": true,
+        "include": true,
+        "Debug": true,
+        "Release": true,
+        "Profiling": true
+    },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
-    "debug.allowBreakpointsEverywhere": true
+    "[Log]": {
+        "editor.wordWrap": "on",
+        "editor.fontSize": 10
+    }
 }
