--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "CMake Debug",
+            "label": "CMake Build (Debug)",
             "type": "shell",
             "command": "cmake",
             "args": [
