--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ include("${PROJECT_HOME}/cmake/CMakeLists.txt")
 
 set(${PROJECT_NAME_U}_MAJOR_VERSION  0)
 set(${PROJECT_NAME_U}_MINOR_VERSION  1)
-set(${PROJECT_NAME_U}_BUILD_VERSION 12)
+set(${PROJECT_NAME_U}_BUILD_VERSION 13)
 
 set(${PROJECT_NAME_U}_VERSION
   ${${PROJECT_NAME_U}_MAJOR_VERSION}.${${PROJECT_NAME_U}_MINOR_VERSION}.${${PROJECT_NAME_U}_BUILD_VERSION})
@@ -56,7 +56,9 @@ message(STATUS "package list has been set to ${PACKAGES}")
 
 load_packages(
 	NAME ${PACKAGES}
-	PROFILE ${CMAKE_PROFILE}
+	USER ${CONAN_USERNAME}
+	CHANNEL ${CONAN_CHANNEL}
+	PROFILE ${CONAN_PROFILE}
 	SETTINGS "${CONAN_EXTRA_SETTINGS};build_type=${CMAKE_BUILD_TYPE}"
 	OPTIONS ""
 	UPDATE
