--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ load_packages(
 	USER ${CONAN_USERNAME}
 	CHANNEL ${CONAN_CHANNEL}
 	PROFILE ${CONAN_PROFILE}
-	SETTINGS "${CONAN_EXTRA_SETTINGS};build_type=${CMAKE_BUILD_TYPE}"
+	SETTINGS "build_type=${CMAKE_BUILD_TYPE}"
 	OPTIONS ""
 	UPDATE
 )
