--- a/conan/CMakeLists.txt
+++ b/conan/CMakeLists.txt
@@ -19,7 +19,7 @@ if (SKIP_CONAN_PACKAGE STREQUAL "OFF")
 	conan_export(
 		PACKAGE ${PROJECT_NAME}
 		REVISION ${${PROJECT_NAME_U}_VERSION}
-		USER ${CONAN_USER}
+		USER ${CONAN_USERNAME}
 		CHANNEL ${CONAN_CHANNEL}
 		PROFILE ${CONAN_PROFILE}
 		DIRECTORY conan
