--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(clock)
 add_subdirectory(detect)
 add_subdirectory(filter)
 add_subdirectory(lambda)
+add_subdirectory(bundle)
 add_subdirectory(factory)
 add_subdirectory(contains)
 add_subdirectory(recorder)
